🐛 scroll overflow bug

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 .main-heading {
   text-align: center;
   font-size: 2.5rem;
-  margin: 3rem 0;
+  padding: 3rem 0;
   text-decoration: underline wavy;
   text-decoration-color: #ffc107;
 }
